--- a/textproc/ipadic/Makefile
+++ b/textproc/ipadic/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.9 2005/04/11 21:47:35 tv Exp $
+# $NetBSD: Makefile,v 1.10 2005/08/18 15:44:44 taca Exp $
 #
 
 DISTNAME=	ipadic-2.7.0
-PKGREVISION=	1
+PKGREVISION=	2
 CATEGORIES=	japanese textproc
 MASTER_SITES=	http://chasen.aist-nara.ac.jp/stable/ipadic/
 
