--- a/textproc/namazu2/Makefile
+++ b/textproc/namazu2/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.20 2005/07/12 16:03:56 taca Exp $
+# $NetBSD: Makefile,v 1.21 2005/07/15 20:14:03 jlam Exp $
 
 DISTNAME=	namazu-2.0.14
-PKGREVISION=	2
+PKGREVISION=	3
 CATEGORIES=	japanese textproc www
 MASTER_SITES=	http://www.namazu.org/stable/
 
