--- a/mail/qmail-conf/Makefile
+++ b/mail/qmail-conf/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.22 2005/04/09 22:36:56 schmonz Exp $
+# $NetBSD: Makefile,v 1.23 2005/04/11 21:46:23 tv Exp $
 #
 
 DISTNAME=		qmail-conf-0.60
@@ -17,7 +17,6 @@ DEPENDS+=		qmail>=1.03nb7:../../mail/qmail
 DEPENDS+=		ucspi-tcp>=0.86:../../net/ucspi-tcp
 
 SITES_djbdns-1.05.tar.gz=	http://cr.yp.to/djbdns/ ftp://cr.yp.to/djbdns/
-
 
 DJB_RESTRICTED=		NO
 DJB_CONFIG_CMDS=	${ECHO} ${LOCALBASE} > ${WRKSRC}/conf-ucspi-tcp
