--- a/mail/queue-fix/Makefile
+++ b/mail/queue-fix/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.4 2005/03/23 00:51:10 schmonz Exp $
+# $NetBSD: Makefile,v 1.5 2005/04/11 21:46:27 tv Exp $
 #
 
 DISTNAME=		queue-fix
@@ -11,7 +11,6 @@ HOMEPAGE=		http://www.netmeridian.com/e-huss/
 COMMENT=		Check and repair the qmail queue structure
 
 WRKSRC=			${WRKDIR}/${PKGNAME_NOREV}
-
 
 INSTALLATION_DIRS=	bin share/doc/queue-fix
 
