--- a/math/djbfft/Makefile
+++ b/math/djbfft/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.7 2005/03/23 00:57:20 schmonz Exp $
+# $NetBSD: Makefile,v 1.8 2005/04/11 21:46:28 tv Exp $
 
 DISTNAME=       	djbfft-0.76
 CATEGORIES=     	math
@@ -7,7 +7,6 @@ MASTER_SITES=   	http://cr.yp.to/djbfft/
 MAINTAINER=     	tech-pkg@NetBSD.org
 HOMEPAGE=       	http://pobox.com/~djb/djbfft.html
 COMMENT=        	Extremely fast library for floating-point convolution
-
 
 DJB_RESTRICTED=		YES
 NOT_FOR_PLATFORM=	IRIX-*-*
