--- a/sysutils/checkpassword/Makefile
+++ b/sysutils/checkpassword/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.11 2005/03/23 00:57:21 schmonz Exp $
+# $NetBSD: Makefile,v 1.12 2005/04/11 21:47:23 tv Exp $
 #
 
 DISTNAME=		checkpassword-0.90
@@ -12,7 +12,6 @@ COMMENT=		Simple, uniform password-checking interface to all root applications
 DJB_RESTRICTED=		YES
 
 PKG_INSTALLATION_TYPES=	overwrite pkgviews
-
 
 INSTALLATION_DIRS=	bin
 
