--- a/mail/dovecot/Makefile
+++ b/mail/dovecot/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.35 2005/02/14 08:56:34 xtraeme Exp $
+# $NetBSD: Makefile,v 1.36 2005/04/11 21:46:18 tv Exp $
 
 DISTNAME=		dovecot-0.99.14
+PKGREVISION=		1
 CATEGORIES=		mail
 MASTER_SITES=		http://www.dovecot.org/releases/
 
