--- a/chat/gaim/Makefile
+++ b/chat/gaim/Makefile
@@ -22,17 +22,14 @@ GNU_CONFIGURE=		yes
 SHLIBTOOL_OVERRIDE=	libtool
 
 CONFIGURE_ARGS+=	--disable-binreloc
-CONFIGURE_ARGS+=	--disable-gnutls
 CONFIGURE_ARGS+=	--disable-nas
 CONFIGURE_ARGS+=	--disable-perl
 CONFIGURE_ARGS+=	--disable-tcl
 CONFIGURE_ARGS+=	--disable-gevolution
-CONFIGURE_ARGS+=	--with-nspr-includes=${BUILDLINK_PREFIX.nspr}/include/nspr
-CONFIGURE_ARGS+=	--with-nspr-libs=${BUILDLINK_PREFIX.nspr}/lib/nspr
-CONFIGURE_ARGS+=	--with-nss-includes=${BUILDLINK_PREFIX.nss}/include/nss/nss
-CONFIGURE_ARGS+=	--with-nss-libs=${BUILDLINK_PREFIX.nss}/lib/nss
 CONFIGURE_ARGS+=	--with-silc-includes=${BUILDLINK_PREFIX.silc-toolkit}/include/silc
 CONFIGURE_ARGS+=	--with-silc-libs=${BUILDLINK_PREFIX.silc-toolkit}/lib/silc
+
+.include "options.mk"
 
 .include "../../mk/bsd.prefs.mk"
 
@@ -45,7 +42,6 @@ CONFIGURE_ARGS+=	--disable-screensaver
 .include "../../converters/libiconv/buildlink3.mk"
 .include "../../devel/gettext-lib/buildlink3.mk"
 .include "../../devel/glib2/buildlink3.mk"
-.include "../../devel/nss/buildlink3.mk"
 .include "../../devel/silc-toolkit/buildlink3.mk"
 .include "../../textproc/gtkspell/buildlink3.mk"
 .include "../../x11/gtk2/buildlink3.mk"
