--- a/print/Makefile
+++ b/print/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.131 2005/08/10 05:21:44 reed Exp $
+# $NetBSD: Makefile,v 1.132 2005/08/12 19:21:57 drochner Exp $
 #
 
 COMMENT=	Desktop publishing
@@ -30,6 +30,7 @@ SUBDIR+=	dvipdfmx
 SUBDIR+=	dvipng
 SUBDIR+=	enscript
 SUBDIR+=	epstool
+SUBDIR+=	evince
 SUBDIR+=	foomatic-filters
 SUBDIR+=	foomatic-gswrapper
 SUBDIR+=	ggv2
@@ -87,7 +88,9 @@ SUBDIR+=	poster
 SUBDIR+=	pscal
 SUBDIR+=	psify
 SUBDIR+=	psjoin
+SUBDIR+=	pslib
 SUBDIR+=	psutils
+SUBDIR+=	py-pslib
 SUBDIR+=	py-reportlab
 SUBDIR+=	py-reportlab-renderPM
 SUBDIR+=	rlpr
