--- a/devel/gettext-lib/Makefile
+++ b/devel/gettext-lib/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.36 2005/03/24 21:12:52 wiz Exp $
+# $NetBSD: Makefile,v 1.37 2005/04/11 21:45:23 tv Exp $
 
 DISTNAME=		gettext-0.11.5
 PKGNAME=		gettext-lib-0.11.5
 SVR4_PKGNAME=		gttli
-PKGREVISION=		4
+PKGREVISION=		5
 CATEGORIES=		devel
 MASTER_SITES=		${MASTER_SITE_GNU:=gettext/}
 
@@ -25,7 +25,14 @@ MAKE_ENV+=		PKGLOCALEDIR="${PKGLOCALEDIR}"
 
 BUILD_TARGET=		all-yes
 INSTALL_TARGET=		install-exec
+INSTALL_MAKE_FLAGS=	${MAKE_FLAGS} localedir=${EGDIR}
+
 BUILD_DIRS=		${WRKSRC}/intl
+EGDIR=			${PREFIX}/share/examples/gettext
+LOCALEDIR=		${PREFIX}/${PKGLOCALEDIR}/locale
+
+USE_PKGINSTALL=		yes
+REQD_FILES+=		${EGDIR}/locale.alias ${LOCALEDIR}/locale.alias
 
 .include "../../mk/bsd.prefs.mk"
 
