--- a/www/awstats/Makefile
+++ b/www/awstats/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.17 2005/07/16 01:19:25 jlam Exp $
+# $NetBSD: Makefile,v 1.18 2005/08/14 15:33:44 minskim Exp $
 #
 
 DISTNAME=	awstats-6.4
+PKGREVISION=	1
 CATEGORIES=	www
 MASTER_SITES=	http://awstats.sourceforge.net/files/
 EXTRACT_SUFX=	.tgz
