--- a/games/xdemineur/Makefile
+++ b/games/xdemineur/Makefile
@@ -1,14 +1,13 @@
-# $NetBSD: Makefile,v 1.18 2004/03/09 23:29:06 snj Exp $
+# $NetBSD: Makefile,v 1.19 2005/04/11 21:45:58 tv Exp $
 #
 
 DISTNAME=       xdemineur-2.1.1
 PKGREVISION=	1
 CATEGORIES=	games
-MASTER_SITES=	ftp://ftp.babafou.eu.org/pub/babafou/ \
+MASTER_SITES=	http://www.babafou.eu.org/xdemineur/ \
 		${MASTER_SITE_XCONTRIB:=games/}
 
 MAINTAINER=	bouyer@NetBSD.org
-HOMEPAGE=	http://www.spinne.com/x/games/xdemineur/
 COMMENT=	Minesweeper game for the X Window System
 
 USE_IMAKE=	YES
