--- a/databases/gnats/Makefile
+++ b/databases/gnats/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.16 2005/04/11 21:45:11 tv Exp $
+# $NetBSD: Makefile,v 1.17 2005/05/22 20:07:45 jlam Exp $
 #
 
 DISTNAME=	gnats-4.0.1
+PKGREVISION=	1
 CATEGORIES=	databases
 MASTER_SITES=	${MASTER_SITE_GNU:=gnats/}
 
@@ -24,8 +25,8 @@ CONFIGURE_ARGS= --with-lispdir=${PREFIX}/share/emacs/site-lisp
 GNATS_HOME=	${PREFIX}/share/gnats/gnats-db
 PKG_USERS=	gnats:daemon::GNATS\\ database\\ owner:${GNATS_HOME}:${SH}
 
-MAKE_DIRS=		${PREFIX}/share/gnats
-MAKE_DIRS+=		${PREFIX}/libexec/gnats
+REQD_DIRS=		${PREFIX}/share/gnats
+REQD_DIRS+=		${PREFIX}/libexec/gnats
 OWN_DIRS_PERMS=		${GNATS_HOME} gnats daemon 755
 OWN_DIRS_PERMS+=	${GNATS_HOME}/gnats-queue gnats daemon 755
 OWN_DIRS_PERMS+=	${GNATS_HOME}/pending gnats daemon 755
