--- a/lang/sun-jre13/Makefile
+++ b/lang/sun-jre13/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.39 2005/01/30 23:18:38 jmmv Exp $
+# $NetBSD: Makefile,v 1.40 2005/08/19 18:12:37 jlam Exp $
 
 DISTNAME=	j2re-1_3_1_15-linux-i586
 PKGNAME=	sun-jre13-1.0.15
-PKGREVISION=	1
+PKGREVISION=	2
 MASTER_SITES=	# empty
 
 COMMENT=	Sun's Java(tm) Runtime Environment 1.3.1
