--- a/misc/gnome-dirs/Makefile
+++ b/misc/gnome-dirs/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.11 2005/04/11 21:46:34 tv Exp $
+# $NetBSD: Makefile,v 1.12 2005/04/28 23:04:08 jlam Exp $
 #
 
 DISTNAME=	gnome-dirs-1.5
+PKGREVISION=	1
 CATEGORIES=	misc gnome
 MASTER_SITES=	# empty
 DISTFILES=	# empty
@@ -22,7 +23,7 @@ NO_BUILD=	# defined
 .include "dirs.mk"
 .include "../../mk/bsd.prefs.mk"
 
-MAKE_DIRS+=	${GNOME_DIRS:O:S/^/${PREFIX}\//}
+REQD_DIRS+=	${GNOME_DIRS:O:S/^/${PREFIX}\//}
 
 do-install:	# nothing
 
