--- a/math/gcalctool/Makefile
+++ b/math/gcalctool/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.41 2005/07/21 16:29:53 wiz Exp $
+# $NetBSD: Makefile,v 1.42 2005/08/10 20:56:19 jlam Exp $
 #
 
 DISTNAME=		gcalctool-5.5.42
@@ -16,6 +16,7 @@ GNU_CONFIGURE=		YES
 CONFIGURE_ENV+=		HAVE_YACC=yes
 
 USE_DIRS+=		gnome2-1.5
+USE_LIBTOOL=		yes
 USE_TOOLS+=		bison gmake pkg-config
 USE_PKGLOCALEDIR=	yes
 
