--- a/x11/zenity/Makefile
+++ b/x11/zenity/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.22 2005/07/21 16:30:01 wiz Exp $
+# $NetBSD: Makefile,v 1.23 2005/08/10 20:56:30 jlam Exp $
 #
 
-DISTNAME=	zenity-2.10.0
+DISTNAME=	zenity-2.10.1
 CATEGORIES=	x11 gnome2
 MASTER_SITES=	${MASTER_SITE_GNOME:=sources/zenity/2.10/}
 EXTRACT_SUFX=	.tar.bz2
