--- a/misc/gok/Makefile
+++ b/misc/gok/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.28 2005/07/21 16:29:53 wiz Exp $
+# $NetBSD: Makefile,v 1.29 2005/08/10 20:56:20 jlam Exp $
 #
 
-DISTNAME=		gok-1.0.3
+DISTNAME=		gok-1.0.5
 CATEGORIES=		misc
 MASTER_SITES=		${MASTER_SITE_GNOME:=sources/gok/1.0/}
 EXTRACT_SUFX=		.tar.bz2
