--- a/x11/gnopernicus/Makefile
+++ b/x11/gnopernicus/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.29 2005/07/21 16:30:00 wiz Exp $
+# $NetBSD: Makefile,v 1.30 2005/08/10 20:56:26 jlam Exp $
 #
 
-DISTNAME=		gnopernicus-0.10.6
+DISTNAME=		gnopernicus-0.10.9
 CATEGORIES=		x11
 MASTER_SITES=		${MASTER_SITE_GNOME:=sources/gnopernicus/0.10/}
 EXTRACT_SUFX=		.tar.bz2
