--- a/multimedia/totem/Makefile.common
+++ b/multimedia/totem/Makefile.common
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile.common,v 1.7 2005/07/21 16:29:54 wiz Exp $
+# $NetBSD: Makefile.common,v 1.8 2005/08/10 20:56:21 jlam Exp $
 #
 
-DISTNAME=	totem-1.0.2
+DISTNAME=	totem-1.0.4
 CATEGORIES=	multimedia gnome
 MASTER_SITES=	${MASTER_SITE_GNOME:=sources/totem/1.0/}
 
