--- a/mail/evolution/Makefile
+++ b/mail/evolution/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.87 2005/08/10 20:56:19 jlam Exp $
+# $NetBSD: Makefile,v 1.88 2005/08/21 11:34:37 jmmv Exp $
 
 DISTNAME=		evolution-2.2.3
 CATEGORIES=		mail time gnome
@@ -30,6 +30,7 @@ GNU_CONFIGURE=		YES
 USE_DIRS+=		gnome2-1.5
 USE_TOOLS+=		bison gmake pkg-config
 USE_LIBTOOL=		YES
+USE_MSGFMT_PLURALS=	YES
 USE_PKGLOCALEDIR=	YES
 
 REPLACE_PERL+=		addressbook/tools/csv2vcard
