--- a/cad/geda-symbols/Makefile
+++ b/cad/geda-symbols/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.16 2005/01/11 03:16:23 dmcmahill Exp $
+# $NetBSD: Makefile,v 1.17 2005/05/22 20:07:41 jlam Exp $
 #
 
 DISTNAME=	geda-symbols-${PKGVERSION}
@@ -14,5 +14,8 @@ CONFLICTS+=	gEDA<19991011
 
 GNU_CONFIGURE=	YES
 USE_TOOLS+=	gmake gsed
+
+post-install:
+	${RM} -f ${PREFIX}/share/gEDA/sym/micro/gschem.log.old
 
 .include "../../mk/bsd.pkg.mk"
