--- a/www/drivel/Makefile
+++ b/www/drivel/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.17 2005/07/21 16:29:59 wiz Exp $
+# $NetBSD: Makefile,v 1.18 2005/08/10 20:56:25 jlam Exp $
 #
 
-DISTNAME=	drivel-2.0.1
+DISTNAME=	drivel-2.0.2
 CATEGORIES=	www gnome
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=drivel/}
 EXTRACT_SUFX=	.tar.bz2
