--- a/databases/mysql-server/Makefile
+++ b/databases/mysql-server/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.63 2005/01/20 14:17:14 xtraeme Exp $
+# $NetBSD: Makefile,v 1.64 2005/04/11 21:45:12 tv Exp $
 
 PKGNAME=		${DISTNAME:S/-/-server-/}
 SVR4_PKGNAME=		mysqs
@@ -21,7 +21,7 @@ CONFIGURE_ARGS+=	--with-pthreads
 USE_PKGINSTALL=		YES
 DEINSTALL_EXTRA_TMPL=	${.CURDIR}/DEINSTALL
 
-PKG_USERS=		${MYSQL_USER}:${MYSQL_GROUP}::MySQL\\ database\\ administrator:${MYSQL_DATADIR}:${SH}
+PKG_USERS=		${MYSQL_USER}:${MYSQL_GROUP}::MySQL\ database\ administrator:${MYSQL_DATADIR}:${SH}
 PKG_GROUPS=		${MYSQL_GROUP}
 RCD_SCRIPTS=		mysqld
 
