--- a/inputmethod/canna-server/Makefile
+++ b/inputmethod/canna-server/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.10 2004/12/28 02:47:43 reed Exp $
+# $NetBSD: Makefile,v 1.11 2005/04/11 21:46:11 tv Exp $
 #
 .include "../canna/Makefile.common"
 
@@ -18,7 +18,7 @@ MESSAGE_SUBST+=	CANNA_USER="${CANNA_USER}"
 MESSAGE_SUBST+=	CANNA_GROUP="${CANNA_GROUP}"
 
 PKG_GROUPS=	${CANNA_GROUP}
-PKG_USERS=	${CANNA_USER}:${CANNA_GROUP}::Canna\\ user
+PKG_USERS=	${CANNA_USER}:${CANNA_GROUP}::Canna\ user
 
 OWN_DIRS_PERMS=	${CANNA_SPOOL} ${CANNA_USER} ${CANNA_GROUP} ${CANNA_MODE}
 
