--- a/mail/mailman/Makefile
+++ b/mail/mailman/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.21 2005/03/02 21:09:56 kim Exp $
+# $NetBSD: Makefile,v 1.22 2005/06/01 23:25:07 bouyer Exp $
 
 DISTNAME=	mailman-2.1.6
 PKGREVISION=	# empty
@@ -43,7 +43,7 @@ PLIST_SUBST+=		PYVERSSUFFIX=${PYVERSSUFFIX}
 PLIST_SUBST+=		MAILMAN_CGIEXT=${MAILMAN_CGIEXT:S/none//}
 
 PKG_GROUPS=		${MAILMAN_GROUP}
-PKG_USERS=		${MAILMAN_USER}:${MAILMAN_GROUP}::Mailman\\ user::${SH}
+PKG_USERS=		${MAILMAN_USER}:${MAILMAN_GROUP}::Mailman\ user::${SH}
 
 OWN_DIRS_PERMS+=	${EXECDIR} root ${MAILMAN_GROUP} 775
 OWN_DIRS_PERMS+=	${MAILMAN_DATADIR} ${MAILMAN_USER} ${MAILMAN_GROUP} 775
