--- a/net/netsaint-base/Makefile.common
+++ b/net/netsaint-base/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.8 2005/06/01 18:03:08 jlam Exp $
+# $NetBSD: Makefile.common,v 1.9 2005/07/16 01:19:16 jlam Exp $
 #
 
 CATEGORIES=		net sysutils
@@ -12,8 +12,8 @@ NETSTADM_GROUP?=	${NETSTADM_USER}
 PKG_GROUPS+=	${NETSAINT_GROUP}
 PKG_GROUPS+=	${NETSTADM_GROUP}
 
-PKG_USERS+=	${NETSAINT_USER}:${NETSAINT_GROUP}::NetSaint\\ Runtime\\ User
-PKG_USERS+=	${NETSTADM_USER}:${NETSTADM_GROUP}::NetSaint\\ Administrator:${PREFIX}/etc/netsaint:${SH}
+PKG_USERS+=	${NETSAINT_USER}:${NETSAINT_GROUP}::NetSaint\ Runtime\ User
+PKG_USERS+=	${NETSTADM_USER}:${NETSTADM_GROUP}::NetSaint\ Administrator:${PREFIX}/etc/netsaint:${SH}
 
 GNU_CONFIGURE=		YES
 USE_TOOLS+=		gmake perl:run
