--- a/parallel/sge/Makefile
+++ b/parallel/sge/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.10 2005/06/17 03:50:29 jlam Exp $
+# $NetBSD: Makefile,v 1.11 2005/07/16 01:19:17 jlam Exp $
 #
 
 DISTNAME=		sge-5.3p6
@@ -27,7 +27,7 @@ USE_PKGINSTALL=		YES
 SGE_USER?=		sgeadmin
 SGE_GROUP?=		sgeadmin
 PKG_GROUPS=		${SGE_GROUP}
-PKG_USERS=		${SGE_USER}:${SGE_GROUP}::Sun\\ Grid\\ Engine\\ Administrator
+PKG_USERS=		${SGE_USER}:${SGE_GROUP}::Sun\ Grid\ Engine\ Administrator
 
 EVAL_PREFIX+=	PKGSRC_SSL_PREFIX=openssl
 
