--- a/www/instiki/Makefile
+++ b/www/instiki/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.8 2005/03/06 17:15:52 taca Exp $
+# $NetBSD: Makefile,v 1.9 2005/04/11 21:47:54 tv Exp $
 
 DISTNAME=	instiki-0.9.2
 PKGREVISION=	3
@@ -13,7 +13,7 @@ COMMENT=	Wiki clone that focuses on simple installation and running
 DEPENDS+=	${RUBY_PKGPREFIX}-digest-[0-9]*:../../security/ruby-digest
 DEPENDS+=	${RUBY_PKGPREFIX}-zlib-[0-9]*:../../devel/ruby-zlib
 
-NO_BUILD=	# defined
+NO_BUILD=	yes
 USE_PKGINSTALL=	yes
 
 RCD_SCRIPTS=	instiki
