--- a/www/mknmz-wwwoffle/Makefile
+++ b/www/mknmz-wwwoffle/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.3 2003/07/22 04:14:24 martti Exp $
+# $NetBSD: Makefile,v 1.4 2005/07/16 01:19:25 jlam Exp $
 #
 
 DISTNAME=	mknmz-wwwoffle-0.7.0
@@ -13,7 +13,7 @@ DEPENDS+=	namazu>=2.0.5:../../textproc/namazu2
 DEPENDS+=	wwwoffle>=2.6:../../www/wwwoffle
 
 USE_TOOLS+=	perl:run
-GNU_CONFIGURE=	# defined
+GNU_CONFIGURE=	yes
 CONFIG_ARGS+=	--prefix=${PREFIX}/share/namazu
 
 .include "../../mk/bsd.pkg.mk"
