--- a/print/ghostscript-gnu/Makefile.common
+++ b/print/ghostscript-gnu/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.23 2005/05/30 15:39:11 dillo Exp $
+# $NetBSD: Makefile.common,v 1.24 2005/10/08 22:41:56 jschauma Exp $
 
 DISTNAME=	ghostscript-${GS_VERS}
 GS_VERS=	8.15
@@ -11,6 +11,7 @@ MAINTAINER=	tech-pkg@NetBSD.org
 HOMEPAGE=	http://www.cs.wisc.edu/~ghost/index.html
 
 CONFLICTS+=	ghostscript{,-nox11}-[0-9]*
+CONFLICTS+=	ghostscript-afpl-[0-9]*
 CONFLICTS+=	ghostscript-esp{,-nox11}-[0-9]*
 CONFLICTS+=	ghostscript-gnu{,-nox11,-x11}-[0-9]*
 
