render -> renderext, to match rename. From PR 31919 by Gilles Dauphin.

--- a/mk/defaults/mk.conf
+++ b/mk/defaults/mk.conf
@@ -1,4 +1,4 @@
-# $NetBSD: mk.conf,v 1.81 2005/10/04 21:45:02 reed Exp $
+# $NetBSD: mk.conf,v 1.82 2005/10/06 21:04:49 agc Exp $
 #
 
 # A file providing defaults for pkgsrc and the packages collection.
@@ -144,7 +144,7 @@ PKGSRC_RUN_TEST?=	no
 # Default: no
 
 PREFER_PKGSRC?=		MesaLib Xft2 Xrandr Xrender expat fontconfig	\
-			freetype2 glu randrext render xcursor
+			freetype2 glu randrext renderext xcursor
 PREFER_NATIVE?=		yes
 #
 # When building packages, whether to prefer the pkgsrc or native
