Moved default definition of MANINSTALL from defaults/mk.conf to bsd.prefs.mk, as it is not intended to be set in mk.conf.

--- a/mk/defaults/mk.conf
+++ b/mk/defaults/mk.conf
@@ -1,4 +1,4 @@
-# $NetBSD: mk.conf,v 1.85 2005/11/09 01:06:48 reed Exp $
+# $NetBSD: mk.conf,v 1.86 2005/11/10 09:48:04 rillig Exp $
 #
 
 # A file providing defaults for pkgsrc and the packages collection.
@@ -15,11 +15,6 @@
 # security exploits
 # Possible: defined, not defined
 # Default: not defined
-
-MANINSTALL?= maninstall catinstall
-# Specify manpage installation types.
-# Possible: maninstall, catinstall, both types or empty
-# Default: maninstall catinstall
 
 #MANZ=
 # gzip manual pages at installation time
