--- a/mk/platform/AIX.pkg.dist
+++ b/mk/platform/AIX.pkg.dist
@@ -1,5 +1,5 @@
 #     Id: BSD.local.dist,v 1.30 1997/08/01 13:16:39 phk Exp 
-#	$NetBSD: AIX.pkg.dist,v 1.5 2005/08/19 21:47:51 jmmv Exp $
+#	$NetBSD: AIX.pkg.dist,v 1.6 2005/10/14 16:46:17 jmmv Exp $
 #
 
 /set type=dir uname=root gname=system mode=0755
@@ -722,6 +722,10 @@
                 LC_MESSAGES
                 ..
             ..
+            lo
+                LC_MESSAGES
+                ..
+            ..
             lt
                 LC_MESSAGES
                 ..
@@ -903,6 +907,10 @@
                 ..
             ..
             sr@ije
+                LC_MESSAGES
+                ..
+            ..
+            ss
                 LC_MESSAGES
                 ..
             ..
