--- a/games/crossfire-client/Makefile
+++ b/games/crossfire-client/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD$
+# $NetBSD: Makefile,v 1.1.1.1 2006/05/11 05:57:14 adam Exp $
 
 .include "../../games/crossfire-client/Makefile.common"
 
 COMMENT=	Multi-player graphical arcade and adventure game; X11 client
 
+.include "../../x11/libX11/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
