Fix typo in MASTER_SITES.

--- a/devel/elib/Makefile.common
+++ b/devel/elib/Makefile.common
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile.common,v 1.1 2006/05/26 19:33:36 joerg Exp $
+# $NetBSD: Makefile.common,v 1.2 2006/07/21 14:27:56 jlam Exp $
 #
 
 DISTNAME=	elib-1.0
 CATEGORIES=	devel
-MASTER_SITES=	http://jde.sunsite.dk/
+MASTER_SITES=	http://jdee.sunsite.dk/
 
 MAINTAINER=	cjones@NetBSD.org
 COMMENT=	Library of utility functions for Emacs
