Fixed a segmentation fault on IRIX. Although IRIX provides the REG_STARTEND macro, it doesn't work as expected. A simple test case is:
	printf '\0\n\0\n' | nbsed /a/d

This test does not yet work as expected, but at least it doesn't cause
segmentation faults anymore. Handling of '\0' bytes must be improved.

--- a/textproc/nbsed/files/config.h.in
+++ b/textproc/nbsed/files/config.h.in
@@ -37,6 +37,9 @@
 /* Define to 1 if you have the <regex.h> header file. */
 #undef HAVE_REGEX_H
 
+/* Do you have a working REG_STARTEND? */
+#undef HAVE_REG_STARTEND
+
 /* Define to 1 if you have the <stdarg.h> header file. */
 #undef HAVE_STDARG_H
 
