--- a/textproc/nbsed/Makefile
+++ b/textproc/nbsed/Makefile
@@ -1,6 +1,7 @@
-# $NetBSD: Makefile,v 1.13 2006/03/04 21:30:47 jlam Exp $
+# $NetBSD: Makefile,v 1.14 2006/07/14 16:24:28 jlam Exp $
 
 DISTNAME=		nbsed-20040821
+PKGREVISION=		1
 CATEGORIES=		textproc pkgtools
 MASTER_SITES=		# empty
 DISTFILES=		# empty
